--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -14,6 +14,17 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintVertical_bias="0.012">
 
+    <TextView
+            android:id="@+id/category_text"
+            tools:text="CATEGORY"
+            android:alpha="0.2"
+            android:textSize="24sp"
+            android:textColor="@color/colorLightGrey"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"/>
+
     <FrameLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
@@ -29,7 +40,16 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/word_show_english_text"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="60dp"/>
+
+        <TextView
+                android:id="@+id/transcription_show_english_text"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="20dp"
+                tools:text="[transcription]"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorLightGrey"/>
 
         <TextView
                 tools:text="слово"
@@ -57,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
-            android:visibility="visible">
+            android:visibility="gone">
 
         <TextView
                 tools:text="word"
@@ -69,6 +89,16 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"/>
+
+        <TextView
+                android:id="@+id/transcription_variant_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="100dp"
+                tools:text="[transcription]"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorLightGrey"/>
 
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -144,6 +174,16 @@
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"/>
 
+        <TextView
+                android:id="@+id/transcription_write_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="100dp"
+                tools:text="[transcription]"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorLightGrey"/>
+
         <LinearLayout
                 android:id="@+id/write_word_layout"
                 android:layout_width="wrap_content"
@@ -195,7 +235,7 @@
             android:id="@+id/layout_choose_word"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="visible">
 
         <TextView
                 tools:text="word"
@@ -207,6 +247,16 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"/>
+
+        <TextView
+                android:id="@+id/transcription_choose_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="100dp"
+                tools:text="[transcription]"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorLightGrey"/>
 
 
         <GridLayout
