--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,100 +6,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.LoginActivity"
-        android:id="@+id/coordinatorLayout">
+        android:id="@+id/layout_login">
 
-    <TextView
+    <ProgressBar
+            android:id="@+id/progressbar_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:fontFamily="@font/pacifico"
-            android:textColor="@color/colorAccent"
-            android:textSize="24sp"
-            android:layout_marginTop="8dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:visibility="gone"/>
 
     <FrameLayout
-            android:id="@+id/login_loading_layout"
+            android:id="@+id/fragment_login"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"/>
 
-        <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"/>
+    <ProgressBar
+            android:elevation="16dp"
+            android:id="@+id/progressbar_sign_in"
+            android:layout_gravity="end|bottom"
+            android:indeterminateTint="@color/colorWhite"
+            android:layout_margin="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:visibility="gone"/>
 
-    </FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/button_next"
+            android:onClick="onNextButtonClick"
+            android:src="@drawable/ic_arrow_forward_white_24dp"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/login_form_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <TextView
-                android:text="@string/greeting"
-                android:textSize="18sp"
-                android:textAlignment="center"
-                android:layout_width="260dp"
-                android:layout_height="62dp"
-                android:id="@+id/greeting" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.229"/>
-
-        <EditText
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:hint="@string/email"
-                android:id="@+id/email_editText"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/greeting" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
-                android:autofillHints="@string/app_name"/>
-
-        <EditText
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:hint="@string/password"
-                android:id="@+id/password_editText"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/email_editText" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintVertical_bias="0.029"/>
-
-        <Button
-                android:text="@string/login"
-                android:backgroundTint="@color/colorAccent"
-                android:layout_width="wrap_content"
-                android:textColor="@color/colorWhite"
-                android:layout_height="wrap_content"
-                android:onClick="onLogInButtonClick"
-                android:id="@+id/login_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/password_editText"
-                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.113"/>
-
-        <Button
-                android:onClick="onCreateButtonClick"
-                android:text="@string/create_account"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/create_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_button"
-                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.069"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+            android:id="@+id/button_back"
+            android:layout_width="48dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:onClick="onBackButtonClick"
+            android:visibility="gone"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
