--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,15 +18,7 @@
             android:layout_marginTop="8dp"
             android:layout_gravity="center_horizontal"/>
 
-    <Button
-            android:id="@+id/back_signup"
-            android:layout_width="48dp"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="8dp"
-            android:onClick="onBackButtonClick"/>
+
 
     <FrameLayout
             android:id="@+id/loading_signup"
@@ -43,16 +35,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/form_signup">
+            android:id="@+id/form_signup"
+            android:padding="8dp">
 
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                 android:layout_marginEnd="8dp" android:id="@+id/cardView2" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.257">
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.165">
 
             <RelativeLayout
                     android:layout_width="match_parent"
@@ -64,27 +58,18 @@
                         android:src="@drawable/avatar_placeholder"
                         app:civ_border_color="@color/colorAccent"
                         app:civ_border_width="2dp"
-                        android:layout_width="72dp"
-                        android:layout_height="72dp"/>
-
-                <Button
-                        android:id="@+id/choose_image_signup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/choose_image"
-                        android:layout_centerVertical="true"
-                        android:layout_toRightOf="@id/avatar_signup"
-                        android:layout_marginStart="16dp"
-                        style="@style/Widget.AppCompat.Button.Colored"/>
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"/>
 
                 <Button
                         android:id="@+id/load_image_signup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/load_image"
-                        android:layout_centerVertical="true"
-                        android:layout_toRightOf="@id/choose_image_signup"
-                        android:layout_marginStart="16dp"
+                        android:text="@string/set_an_image"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@id/avatar_signup"
+                        android:layout_marginTop="16dp"
                         style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
 
             </RelativeLayout>
@@ -92,6 +77,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+                app:cardElevation="8dp"
                 app:cardCornerRadius="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="32dp">
 
                 <EditText
                         android:id="@+id/email_signup"
@@ -137,27 +123,8 @@
                         android:id="@+id/confirm_password_signup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/repeat_password"
                         android:layout_marginBottom="16dp"
                         android:inputType="textPassword"/>
-
-                <Spinner
-                        android:id="@+id/level_signup"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:entries="@array/levels">
-
-                </Spinner>
-
-                <Button
-                        android:layout_marginTop="16dp"
-                        android:id="@+id/submit_signup"
-                        android:text="@string/signup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_gravity="center"
-                        android:onClick="onSubmitButtonClick"/>
 
             </LinearLayout>
 
