--- a/app/src/main/res/layout/element_category.xml
+++ b/app/src/main/res/layout/element_category.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
->
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/layout_category"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
     <ImageView
-            android:id="@+id/category_logo"
+            android:layout_margin="16dp"
+            android:id="@+id/image_checked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_star_black_24dp"
-            android:layout_centerVertical="true"/>
+            android:src="@drawable/ic_done_orange_24dp"
+            android:layout_gravity="center_vertical|end"/>
 
     <TextView
-            android:id="@+id/category_name"
+            android:id="@+id/text_category"
             android:textColor="@color/colorGrey"
-            tools:text="Basics"
+            tools:text="Category"
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/category_logo"
-            android:layout_marginStart="8dp"
-            android:layout_centerVertical="true"/>
+            android:layout_margin="16dp"
+            android:layout_gravity="center_vertical"/>
 
-</RelativeLayout>
+</FrameLayout>
